# ReTSM

./: .gitignore  README.md  build.ps1  pubspec.yaml
lib/: main.dart
lib/core/: config_service.dart  ui_utils.dart
lib/core/providers/: config_provider.dart
lib/core/utils/: ui_utils.dart
lib/src/: app.dart
lib/src/common_widgets/: auth_button.dart
lib/src/features/auth/: connection_notifier.dart  login_screen.dart
lib/src/features/chat/: chat_notifier.dart  chat_screen.dart
lib/src/features/home/: chat_view.dart  dashboard_view.dart  home_screen.dart  server_admin_view.dart  settings_view.dart
lib/src/features/users/: users_notifier.dart  users_screen.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/widgets/: expressive_empty_state.dart  rotate_scale_icon.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: config.rs  frb_generated.rs  lib.rs  logger.rs  query_client.rs  ts_client.rs
rust/src/api/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_re_tsm.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_re_tsm.podspec
rust_builder/windows/: CMakeLists.txt
test/: dummy_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
