[package]
name = "rust_lib_re_tsm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib_re_tsm"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
futures-util = { version = "0.3.32", features = ["sink"] }
lazy_static = "1.5.0"
chrono = "0.4"
